# requests-scram

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requests_scram.py  requirements.txt
.github/: FUNDING.yml
dev/: requirements.txt
typing/: requirements.txt
